feat: form update and style tweaks

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -482,6 +482,10 @@ tbody tr:hover {
   color: var(--color-fuchsia-500);
 }
 
+.text-white {
+  color: white;
+}
+
 .border-fuchsia-500 {
   border-color: var(--color-fuchsia-500);
 }
