fix: rendermode for ssr and build

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -494,19 +494,19 @@ tbody tr:hover {
   border-width: 2px;
 }
 
-.hover\\:bg-primary-600:hover {
+.hover\:bg-primary-600:hover {
   background-color: var(--color-primary-600);
 }
 
-.hover\\:bg-fuchsia-500:hover {
+.hover\:bg-fuchsia-500:hover {
   background-color: var(--color-fuchsia-500);
 }
 
-.hover\\:bg-fuchsia-600:hover {
+.hover\:bg-fuchsia-600:hover {
   background-color: var(--color-fuchsia-600);
 }
 
-.hover\\:text-white:hover {
+.hover\:text-white:hover {
   color: white;
 }
 
@@ -528,7 +528,7 @@ tbody tr:hover {
   box-shadow: var(--shadow-lg);
 }
 
-.hover\\:shadow-lg:hover {
+.hover\:shadow-lg:hover {
   box-shadow: var(--shadow-lg);
 }
 
@@ -536,7 +536,7 @@ tbody tr:hover {
   opacity: 0.8;
 }
 
-.hover\\:opacity-80:hover {
+.hover\:opacity-80:hover {
   opacity: 0.8;
 }
 
